--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -178,7 +178,30 @@
 			"TEXT_VIDEOS": "Tenemos videos en vivo con consultas sobre las clases:",
 			"TITLE": "Consultas"
 		},
-		"TITLE": "Curso Introductorio de Python"
+		"TITLE": "Curso Introductorio de Python",
+		"FAQ": {
+			"TITLE": "Preguntas frecuentes",
+			"1": {
+				"QUESTION": "¿Tengo que tener experiencia previa en programación?",
+				"ANSWER": "¡No hace falta! Vamos a explicar todo de cero, pero a un buen ritmo."
+			},
+			"2": {
+				"QUESTION": "¿Se recibe un certificado al finalizar el curso?",
+				"ANSWER": "¡Sí! Obtendrán un certificado al completar los desafíos de programación entregables antes del cierre de las entregas."
+			},
+			"3": {
+				"QUESTION": "¿Quiénes pueden participar del curso?",
+				"ANSWER": "El curso es gratuito y abierto a todo público. Dado que se orienta hacia el ámbito profesional, haber terminado el secundario es recomendable pero no excluyente. Se recomienda ampliamente tener estudios primarios completos."
+			},
+			"4": {
+				"QUESTION": "¿Cómo puedo hacer consultas o pedir ayuda?",
+				"ANSWER": "Nos vamos a comunicar mediante la aplicación Discord, donde tenemos un servidor con canales tanto de voz como de texto. Ahí podremos responder todas sus consultas durante la semana, y cualquier duda pendiente se responderá durante el livestream."
+			},
+			"5": {
+				"QUESTION": "¿Voy a poder interactuar con otros participantes?",
+				"ANSWER": "¡Sí! Los alentamos a pensar sus soluciones a los desafíos junto con otros compañeros, pedir ayuda si se traban y ofrecer ayuda si otro la necesita. Las mejores ideas siempre se logran en grupo. Esto también será mediante Discord."
+			}
+		}
 	},
 	"IEEEMEETUP": {
 		"TITLE": "IEEE - 2do Meet Up",
