<minor update>: updated CD section in /team

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -36,7 +36,10 @@
 		},
 		"CARGO2021": {
 			"CD": {
-				"PRESIDENT": "President"
+				"GENERALSEC": "General Secretary",
+				"PRESIDENT": "President",
+				"TREASURER": "Treasurer",
+				"VP": "Vice president"
 			},
 			"EDUCATION": {
 				"TITLE": "Education",
