--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -132,7 +132,7 @@
 			"TOP": "Top"
 		},
 		"PARTICIPATE": {
-			"TEXT": "We opened a form for those that are interested in this year's competition. When we open registrations we will notify you. In the mean time, you can get yourself a team to start training!",
+			"TEXT": "Contact us via ieee@itba.edu.ar for more information and we'll notify you when registration opens. In the meantime, you can get yourself a team and start training!",
 			"TITLE": "Want to participate?"
 		},
 		"SPONSORSHIP": {
