--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -142,7 +142,7 @@
 			"TOP": "Arriba"
 		},
 		"PARTICIPATE": {
-			"TEXT": "Abrimos un formulario para aquellos que estén interesados en la competencia de este año, cuando abramos las inscripciones les mandaremos una notificación. ¡Aprovecha el tiempo para conseguir un equipo y entrenar!",
+			"TEXT": "Contactanos a través de ieee@itba.edu.ar así te contamos un poco más y te avisamos cuando abran las inscripciones ¡Aprovecha el tiempo para conseguir un equipo y entrenar!",
 			"TITLE": "¿Querés participar?"
 		},
 		"SPONSORSHIP": {
