--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -198,75 +198,48 @@
 	},
   "DATAANALYSIS": {
     "CLASSES": {
-      "C1": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris",
-      "C2": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris",
-      "C3": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris",
+      "C1": {
+        "M1": "Introduction to libraries (review)",
+        "M2": "Writing and reading of Excel and CSV files",
+        "M3": "Data manipulation with Pandas"
+      },
+      "C2": {
+        "M1": "Introduction to matplotlib",
+        "M2": "Data visualization",
+        "M3": "Customization of plots and graphs",
+        "M4": "Application cases"
+      },
       "TITLE": "Class "
     },
     "DESC_TITLE": "Description",
-    "DESC": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.",
+    "DESC": "This course is part of a series of courses we offer, with the main goal of learning how to automate simple tasks, efficient file and spreadsheet manipulation, and creating visual data representations. We believe that all of these tasks can be achieved through programming without the need to become an expert in the topic.\n\nThe contents of this course are oriented towards people who are already familiar with the basics of Python programming (such as data types, functions and data structures). We will go over the basics and fundamentals of libraries, file reading and data analysis and representation, putting into practice what we learn through interactive challenges and practical exercises.",
     "FORMAT_SUBTITLE":"Course format",
-    "FORMAT": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.",
+    "FORMAT": "The classes on this course consist of text and video explanations, with the addition of interactive challenges to solve. There will be a week between classes to read and solve these challenges, while being able to chat with us and the rest of the participants using Discord. In addition to this, we will have weekly livestreams to answer your questions.",
     "ENROLLBUTTON": "Enroll now!",
+    "CONTENT_TITLE": "Course contents",
+    "CONTENT_DESC": "The course consists of 2 classes covering the following topics",
     "TITLE": "Data Analysis Course",
     "FAQ": {
       "TITLE": "Frequently asked questions",
       "1": {
-        "QUESTION": "Lorem ipsum dolor sit amet, consectetur adipiscing?",
-        "ANSWER": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+        "QUESTION": "Do I need to have experience programming?",
+        "ANSWER": "For this course, some basic experience with Python will be necessary (flow control, data structures, etc.). If you completed our introductory course, then you are ready for this one!"
       },
       "2": {
-        "QUESTION": "Lorem ipsum dolor sit amet, consectetur adipiscing?",
-        "ANSWER": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+        "QUESTION": "Will I receive a certificate after finishing the course?",
+        "ANSWER": "Yes! You will get a certificate after completing a quiz before the end of the course."
       },
       "3": {
-        "QUESTION": "Lorem ipsum dolor sit amet, consectetur adipiscing?",
-        "ANSWER": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+        "QUESTION": "Who can enter this course?",
+        "ANSWER": "This course is free and open to everyone. Since it’s oriented towards a professional environment, it’s advisable, though not mandatory, to have finished high school. We strongly recommend to have finished primary school."
       },
       "4": {
-        "QUESTION": "Lorem ipsum dolor sit amet, consectetur adipiscing?",
-        "ANSWER": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+        "QUESTION": "How can I ask questions or ask for help?",
+        "ANSWER": "We will communicate through Discord, where we have our own server with voice and text channels. There we will answer your questions during the week, and any remaining questions will be answered during the livestreams."
       },
       "5": {
-        "QUESTION": "Lorem ipsum dolor sit amet, consectetur adipiscing?",
-        "ANSWER": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-      }
-    }
-  },
-  "ADVANCEDPYTHON": {
-    "CLASSES": {
-      "C1": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris",
-      "C2": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris",
-      "C3": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris",
-      "TITLE": "Class "
-    },
-    "DESC_TITLE": "Description",
-    "DESC": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.",
-    "FORMAT_SUBTITLE":"Course format",
-    "FORMAT": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.",
-    "ENROLLBUTTON": "Enroll now!",
-    "TITLE": "Advanced Python Course",
-    "FAQ": {
-      "TITLE": "Frequently asked questions",
-      "1": {
-        "QUESTION": "Lorem ipsum dolor sit amet, consectetur adipiscing?",
-        "ANSWER": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-      },
-      "2": {
-        "QUESTION": "Lorem ipsum dolor sit amet, consectetur adipiscing?",
-        "ANSWER": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-      },
-      "3": {
-        "QUESTION": "Lorem ipsum dolor sit amet, consectetur adipiscing?",
-        "ANSWER": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-      },
-      "4": {
-        "QUESTION": "Lorem ipsum dolor sit amet, consectetur adipiscing?",
-        "ANSWER": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-      },
-      "5": {
-        "QUESTION": "Lorem ipsum dolor sit amet, consectetur adipiscing?",
-        "ANSWER": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+        "QUESTION": "Can I interact with the rest of the participants?",
+        "ANSWER": "Definitely! We encourage you to think of your own solutions to the challenges alongside your partners, ask for help if you’re stuck, and offer help to others in need. This will also be done through Discord."
       }
     }
   },
