--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -72,7 +72,7 @@
 			}
 		},
 		"IEEENEWS": {
-			"TITLE": "IEEE News",
+			"TITLE": "Noticias IEEE",
 			"CONTENT": "¡Enterate de las últimas noticias científicas y tecnológicas!"
 		},
 		"CLASSES": {
