Minor translation fix previous to deploy

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -218,7 +218,7 @@
     "ENROLLBUTTON": "Enroll now!",
     "CONTENT_TITLE": "Course contents",
     "CONTENT_DESC": "The course consists of 2 classes covering the following topics",
-    "TITLE": "Data Analysis Course",
+    "TITLE": "Data Analysis in Python Course",
     "FAQ": {
       "TITLE": "Frequently asked questions",
       "1": {
