--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -228,7 +228,7 @@
     "ENROLLBUTTON": "¡Anotate ahora!",
     "CONTENT_TITLE": "Contenido",
     "CONTENT_DESC": "El curso consiste de 2 clases cubriendo los siguientes temas",
-    "TITLE": "Curso de Análisis de Datos",
+    "TITLE": "Curso de Análisis de Datos en Python",
     "FAQ": {
       "TITLE": "Preguntas Frecuentes",
       "1": {
