actual cd updated without photos

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,7 +3,7 @@
 		"TITLE":"Student Branch",
 		"CARGO": {
 			"CD": {
-				"GENERALSEC": "General Secretary",
+				"GENERALSEC": "Operational manager and General Secretary",
 				"PRESIDENT": "President",
 				"TREASURER": "Treasurer",
 				"VP": "Vice president"
