--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -3,7 +3,7 @@
 		"TITLE":"Rama Estudiantil",
 		"CARGO": {
 			"CD": {
-				"GENERALSEC": "Secretaria General",
+				"GENERALSEC": "Directora de Operaciones y Secretaria General",
 				"PRESIDENT": "Presidente",
 				"TREASURER": "Tesorero",
 				"VP": "Vicepresidente"
