--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,7 +22,8 @@
 			},
 			"ID": {
 				"ASSISTANT": "I+D Assistant",
-				"Director": "I+D Director"
+				"RESEARCHER": "I+D Researcher",
+				"CHIEF": "I+D Director"
 			},
 			"MEDIACOM": {
 				"DIRECTOR": "Media Director",
