--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -17,6 +17,7 @@
 				"TUTOR": "Tutor"
 			},
 			"FUNDRAISING": {
+				"DIRECTOR": "Fundraising Director",
 				"LOGISTICS": "Fundraiser & Logistics",
 				"RRPP": "HR & PR"
 			},
