--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -17,6 +17,7 @@
 				"TUTOR": "Tutor"
 			},
 			"FUNDRAISING": {
+				"DIRECTOR": "Director de Fundraising",
 				"LOGISTICS": "Fundraiser & Logística",
 				"RRPP": "RRHH & RRPP"
 			},
