--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,6 +10,7 @@
 				"VP": "Vice president"
 			},
 			"EDUCATION": {
+				"DIRECTOR": "Director",
 				"ASSISTANT": "Tutor Assistant",
 				"HEADTUTOR": "Head Tutor",
 				"RRPP": "Logistics & PR",
