--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -10,7 +10,7 @@
 				"VP": "Vicepresidente"
 			},
 			"EDUCATION": {
-				"DIRECTOR": "Director",
+				"DIRECTOR": "Director de Educación",
 				"ASSISTANT": "Ayudante de tutorías",
 				"HEADTUTOR": "Tutor Encargado",
 				"RRPP": "RRPP & Logística",
